Import of CWIMMER/Net-Amazon-SignatureVersion4-0.003 from CPAN.
gitpan-cpan-distribution: Net-Amazon-SignatureVersion4
gitpan-cpan-version:      0.003
gitpan-cpan-path:         CWIMMER/Net-Amazon-SignatureVersion4-0.003.tar.gz
gitpan-cpan-author:       CWIMMER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: "Signs requests using Amazon's Signature Version 4."
 author:
   - 'Charles A. Wimmer <charles@wimmer.net>'
 build_requires:
+  Dist::Zilla::App::Command::cover: 0
   File::Slurp: 0
   HTTP::Request: 0
   JSON: 0
@@ -36,4 +37,4 @@ requires:
   warnings: 0
 resources:
   repository: https://github.com/cwimmer/Net-Amazon-SignatureVersion4.git
-version: 0.001
+version: 0.003
