--- a/META.yml
+++ b/META.yml
@@ -16,10 +16,11 @@ build_requires:
   Test::Perl::Critic: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
+  perl: 5.012
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300021, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300023, CPAN::Meta::Converter version 2.120921'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -37,4 +38,4 @@ requires:
   warnings: 0
 resources:
   repository: https://github.com/cwimmer/Net-Amazon-SignatureVersion4.git
-version: 0.003
+version: 0.004
